cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_arm64.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: standard_arm64
---
[
    "c6g.12xlarge",
    "c6g.16xlarge",
    "c6g.2xlarge",
    "c6g.4xlarge",
    "c6g.8xlarge",
    "c6g.large",
    "c6g.medium",
    "c6g.xlarge",
    "c6gd.12xlarge",
    "c6gd.16xlarge",
    "c6gd.2xlarge",
    "c6gd.4xlarge",
    "c6gd.8xlarge",
    "c6gd.large",
    "c6gd.medium",
    "c6gd.xlarge",
    "c7g.12xlarge",
    "c7g.16xlarge",
    "c7g.2xlarge",
    "c7g.4xlarge",
    "c7g.8xlarge",
    "c7g.large",
    "c7g.medium",
    "c7g.xlarge",
    "c7gd.12xlarge",
    "c7gd.16xlarge",
    "c7gd.2xlarge",
    "c7gd.4xlarge",
    "c7gd.8xlarge",
    "c7gd.large",
    "c7gd.medium",
    "c7gd.xlarge",
    "c7gn.12xlarge",
    "c7gn.16xlarge",
    "c7gn.2xlarge",
    "c7gn.4xlarge",
    "c7gn.8xlarge",
    "c7gn.large",
    "c7gn.medium",
    "c7gn.xlarge",
    "c8g.12xlarge",
    "c8g.16xlarge",
    "c8g.24xlarge",
    "c8g.2xlarge",
    "c8g.48xlarge",
    "c8g.4xlarge",
    "c8g.8xlarge",
    "c8g.large",
    "c8g.medium",
    "c8g.xlarge",
    "c8gb.12xlarge",
    "c8gb.16xlarge",
    "c8gb.24xlarge",
    "c8gb.2xlarge",
    "c8gb.4xlarge",
    "c8gb.8xlarge",
    "c8gb.large",
    "c8gb.medium",
    "c8gb.xlarge",
    "c8gd.12xlarge",
    "c8gd.16xlarge",
    "c8gd.24xlarge",
    "c8gd.2xlarge",
    "c8gd.48xlarge",
    "c8gd.4xlarge",
    "c8gd.8xlarge",
    "c8gd.large",
    "c8gd.medium",
    "c8gd.xlarge",
    "c8gn.12xlarge",
    "c8gn.16xlarge",
    "c8gn.24xlarge",
    "c8gn.2xlarge",
    "c8gn.48xlarge",
    "c8gn.4xlarge",
    "c8gn.8xlarge",
    "c8gn.large",
    "c8gn.medium",
    "c8gn.xlarge",
    "hpc7g.16xlarge",
    "hpc7g.4xlarge",
    "hpc7g.8xlarge",
    "m6g.12xlarge",
    "m6g.16xlarge",
    "m6g.2xlarge",
    "m6g.4xlarge",
    "m6g.8xlarge",
    "m6g.large",
    "m6g.medium",
    "m6g.xlarge",
    "m6gd.12xlarge",
    "m6gd.16xlarge",
    "m6gd.2xlarge",
    "m6gd.4xlarge",
    "m6gd.8xlarge",
    "m6gd.large",
    "m6gd.medium",
    "m6gd.xlarge",
    "m7g.12xlarge",
    "m7g.16xlarge",
    "m7g.2xlarge",
    "m7g.4xlarge",
    "m7g.8xlarge",
    "m7g.large",
    "m7g.medium",
    "m7g.xlarge",
    "m7gd.12xlarge",
    "m7gd.16xlarge",
    "m7gd.2xlarge",
    "m7gd.4xlarge",
    "m7gd.8xlarge",
    "m7gd.large",
    "m7gd.medium",
    "m7gd.xlarge",
    "m8g.12xlarge",
    "m8g.16xlarge",
    "m8g.24xlarge",
    "m8g.2xlarge",
    "m8g.48xlarge",
    "m8g.4xlarge",
    "m8g.8xlarge",
    "m8g.large",
    "m8g.medium",
    "m8g.xlarge",
    "m8gb.12xlarge",
    "m8gb.16xlarge",
    "m8gb.24xlarge",
    "m8gb.2xlarge",
    "m8gb.4xlarge",
    "m8gb.8xlarge",
    "m8gb.large",
    "m8gb.medium",
    "m8gb.xlarge",
    "m8gd.12xlarge",
    "m8gd.16xlarge",
    "m8gd.24xlarge",
    "m8gd.2xlarge",
    "m8gd.48xlarge",
    "m8gd.4xlarge",
    "m8gd.8xlarge",
    "m8gd.large",
    "m8gd.medium",
    "m8gd.xlarge",
    "m8gn.12xlarge",
    "m8gn.16xlarge",
    "m8gn.24xlarge",
    "m8gn.2xlarge",
    "m8gn.48xlarge",
    "m8gn.4xlarge",
    "m8gn.8xlarge",
    "m8gn.large",
    "m8gn.medium",
    "m8gn.xlarge",
    "r6g.12xlarge",
    "r6g.16xlarge",
    "r6g.2xlarge",
    "r6g.4xlarge",
    "r6g.8xlarge",
    "r6g.large",
    "r6g.medium",
    "r6g.xlarge",
    "r6gd.12xlarge",
    "r6gd.16xlarge",
    "r6gd.2xlarge",
    "r6gd.4xlarge",
    "r6gd.8xlarge",
    "r6gd.large",
    "r6gd.medium",
    "r6gd.xlarge",
    "r7g.12xlarge",
    "r7g.16xlarge",
    "r7g.2xlarge",
    "r7g.4xlarge",
    "r7g.8xlarge",
    "r7g.large",
    "r7g.medium",
    "r7g.xlarge",
    "r7gd.12xlarge",
    "r7gd.16xlarge",
    "r7gd.2xlarge",
    "r7gd.4xlarge",
    "r7gd.8xlarge",
    "r7gd.large",
    "r7gd.medium",
    "r7gd.xlarge",
    "r8g.12xlarge",
    "r8g.16xlarge",
    "r8g.24xlarge",
    "r8g.2xlarge",
    "r8g.48xlarge",
    "r8g.4xlarge",
    "r8g.8xlarge",
    "r8g.large",
    "r8g.medium",
    "r8g.xlarge",
    "r8gb.12xlarge",
    "r8gb.16xlarge",
    "r8gb.24xlarge",
    "r8gb.2xlarge",
    "r8gb.4xlarge",
    "r8gb.8xlarge",
    "r8gb.large",
    "r8gb.medium",
    "r8gb.xlarge",
    "r8gd.12xlarge",
    "r8gd.16xlarge",
    "r8gd.24xlarge",
    "r8gd.2xlarge",
    "r8gd.48xlarge",
    "r8gd.4xlarge",
    "r8gd.8xlarge",
    "r8gd.large",
    "r8gd.medium",
    "r8gd.xlarge",
    "r8gn.12xlarge",
    "r8gn.16xlarge",
    "r8gn.24xlarge",
    "r8gn.2xlarge",
    "r8gn.48xlarge",
    "r8gn.4xlarge",
    "r8gn.8xlarge",
    "r8gn.large",
    "r8gn.medium",
    "r8gn.xlarge",
    "t4g.2xlarge",
    "t4g.large",
    "t4g.medium",
    "t4g.micro",
    "t4g.nano",
    "t4g.small",
    "t4g.xlarge",
]
