cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_arm64_efa.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: efa_arm64
---
[
    "c7g.16xlarge",
    "c7gd.16xlarge",
    "c7gn.16xlarge",
    "c8g.24xlarge",
    "c8g.48xlarge",
    "c8gd.24xlarge",
    "c8gd.48xlarge",
    "c8gn.16xlarge",
    "c8gn.24xlarge",
    "c8gn.48xlarge",
    "hpc7g.16xlarge",
    "hpc7g.4xlarge",
    "hpc7g.8xlarge",
    "m7g.16xlarge",
    "m7gd.16xlarge",
    "m8g.24xlarge",
    "m8g.48xlarge",
    "m8gd.24xlarge",
    "m8gd.48xlarge",
    "r7g.16xlarge",
    "r7gd.16xlarge",
    "r8g.24xlarge",
    "r8g.48xlarge",
    "r8gb.16xlarge",
    "r8gb.24xlarge",
    "r8gd.24xlarge",
    "r8gd.48xlarge",
    "r8gn.16xlarge",
    "r8gn.24xlarge",
    "r8gn.48xlarge",
]
