cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_efa_arm64.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: efa_arm64
---
{
    "c6gn.16xlarge": InstanceInfo {
        instance_type: "c6gn.16xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "c7g.16xlarge": InstanceInfo {
        instance_type: "c7g.16xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "c7gd.16xlarge": InstanceInfo {
        instance_type: "c7gd.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "c7gn.16xlarge": InstanceInfo {
        instance_type: "c7gn.16xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "hpc7g.16xlarge": InstanceInfo {
        instance_type: "hpc7g.16xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "hpc7g.4xlarge": InstanceInfo {
        instance_type: "hpc7g.4xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "hpc7g.8xlarge": InstanceInfo {
        instance_type: "hpc7g.8xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "i4g.16xlarge": InstanceInfo {
        instance_type: "i4g.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "im4gn.16xlarge": InstanceInfo {
        instance_type: "im4gn.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "m7g.16xlarge": InstanceInfo {
        instance_type: "m7g.16xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "m7gd.16xlarge": InstanceInfo {
        instance_type: "m7gd.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "r7g.16xlarge": InstanceInfo {
        instance_type: "r7g.16xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "r7gd.16xlarge": InstanceInfo {
        instance_type: "r7gd.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "r8g.24xlarge": InstanceInfo {
        instance_type: "r8g.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
    "r8g.48xlarge": InstanceInfo {
        instance_type: "r8g.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "arm64",
    },
}
