cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_neuron_ml_cbr_x86_64.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: efa_neuron_x86_64
---
{
    "trn1.32xlarge": InstanceInfo {
        instance_type: "trn1.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
    "trn2.48xlarge": InstanceInfo {
        instance_type: "trn2.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
}
