cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64_efa.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: neuron_x86_64_efa
---
[
    "trn1.32xlarge",
    "trn1n.32xlarge",
    "trn2.48xlarge",
]
