cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64_ml_cbr.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: neuron_x86_64_ml_cbr
---
[
    "trn1.32xlarge",
    "trn2.48xlarge",
]
