cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64_odcr.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: neuron_x86_64_odcr
---
[
    "inf2.24xlarge",
    "inf2.48xlarge",
    "inf2.8xlarge",
    "inf2.xlarge",
    "trn1.2xlarge",
    "trn1.32xlarge",
    "trn1n.32xlarge",
    "trn2.48xlarge",
]
